Creating resources seems to work.